--- a/requirements_updated.txt
+++ b/requirements_updated.txt
@@ -2,7 +2,7 @@ beautifulsoup4==4.11.1
 cleantext==1.1.4
 env==0.1.0
 Flask==3.0.3
-numpy==1.22.4
+numpy
 pandas==1.4.2
 pyserini==1.0.0
 PyYAML==6.0
